There's going to be just one html file

--- a/barlance(index).html
+++ b/barlance(index).html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Abuja Miami</title>
+    <link rel="stylesheet" href="materialize/css/materialize.css">
+    <link rel="stylesheet" href="css/style.css">
+
+
 </head>
 <body>
-    <h3>I AM HERE To Win</h3>
+    <!-- before the nav -->
+
+    <div class="container">
+        <span class="bfn left">+234 8105 599 960</span>
+        <span class="bfn left">Mon-Sat: 4PM - 12AM</span>
+        <span class="bfn left">Sun: 11AM - 12AM</span>
+        <span class="right bfn">En</span>
+    </div>
+        
+
+
+
+
+
+
+
+
 </body>
 </html>
