these are the images we would be using

--- a/barlance(index).html
+++ b/barlance(index).html
@@ -12,13 +12,21 @@
 <body>
     <!-- before the nav -->
 
-    <div class="container">
-        <span class="bfn left">+234 8105 599 960</span>
-        <span class="bfn left">Mon-Sat: 4PM - 12AM</span>
-        <span class="bfn left">Sun: 11AM - 12AM</span>
-        <span class="right bfn">En</span>
-    </div>
+    <div>
+        <div class="container">
+            <span class="bfn left">+234 8105 599 960</span>
+            <span class="bfn left">Mon-Sat: 4PM - 12AM</span>
+            <span class="bfn left">Sun: 11AM - 12AM</span>
+            <span class="right bfn pink-text">En</span>
+        </div>
+
+
+
+
+
+
         
+    </div>
 
 
 
